--- a/index.html
+++ b/index.html
@@ -134,6 +134,21 @@
     </div>
   </section>
 
+  <body>
+
+  <!-- News Section -->
+<section class="home-news section fade-in" style="background:#fff; padding:70px 20px; border-radius:28px; box-shadow:0 20px 45px rgba(0,0,0,0.08); text-align:center; max-width:1100px; margin:50px auto;">
+  <h2 style="font-size:2.2rem; font-weight:700; margin-bottom:20px; background:linear-gradient(90deg,#0d99ff,#b34dff); -webkit-background-clip:text; color:transparent;">
+    Latest News
+  </h2>
+  <p style="color:#444; font-size:1.1rem; max-width:700px; margin:0 auto 30px;">
+    Stay updated with the newest announcements, events, and insights for audiology students.
+  </p>
+  <a href="news.html" class="cta-btn" style="display:inline-block; padding:16px 36px; background:#111; color:#fff; border-radius:14px; font-weight:600; text-decoration:none; box-shadow:0 10px 25px rgba(0,0,0,0.15); transition:transform 0.25s ease, box-shadow 0.25s ease;">
+    Read News
+  </a>
+</section>
+
   <!-- FOOTER -->
   <footer>
     Audiology Students Network © 2025 · Built for future hearing experts
